--- a/themes/standard.theme/styles.scss
+++ b/themes/standard.theme/styles.scss
@@ -5,6 +5,4 @@
 @import 'layout';
 @import 'brand';
 @import 'print';
-<% if args[:'light-mode'] %>
-  @import 'light-mode';
-<% end %>
+@import 'custom';
