--- a/themes/standard.theme/brand.scss
+++ b/themes/standard.theme/brand.scss
@@ -29,7 +29,6 @@ $border-width: 0.05rem !global;
     .hamburger {
       margin-right: $base-line-height;
       width: $base-line-height;
-      padding-top: 8px;
       margin-left: 1.4rem;
       .toggle span {
           background: var(--brand-primary-dark-color);
@@ -44,7 +43,7 @@ $border-width: 0.05rem !global;
   .menu {
     color: var(--brand-primary-dark-color);
     background-color: var(--brand-primary-light-color);
-    border-color: var(--brand-secondary-color);
+    border-color: var(--border-color);
     .name {
       color: var(--brand-primary-dark-color);
       text-align: left;
@@ -216,26 +215,6 @@ $border-width: 0.05rem !global;
     }
   }
 }
-
-@media (prefers-color-scheme: light) {
-  .menu-driver {
-    .menu {
-      border-width: .2rem;
-      padding: $base-line-height - .2rem;
-    }
-
-    nav {
-      margin-bottom: $base-line-height;
-    }
-
-    .guide {
-      &, &:before, &:after {
-        outline: 3px dotted #777;
-      }
-    }
-  }
-}
-
 
 @media print {
   nav {
